--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,16 @@ li{
   display: flex;
 }
 
+.row{
+  display: flex;
+  justify-content: space-around;
+}
+
+.column{
+  display: flex;
+  flex-direction: column;
+}
+
 a{
   text-decoration: none;
   color: black
